--- a/style.css
+++ b/style.css
@@ -54,9 +54,13 @@ footer{
 
 @media (max-width: 768px) {
     
-    .div_img{
-        width: 80%; 
-    }
+    .div_maior {
+        flex-direction: column; 
+        align-items: center;
+
+ .div_img {
+      width: 90%; 
+     }
 
     .div_text{
         font-size: 10%;
@@ -65,9 +69,4 @@ footer{
     footer {
         font-size: 30px;
     }
-
-
-
-
-
 }
