--- a/style.css
+++ b/style.css
@@ -57,16 +57,27 @@ footer{
     .div_maior {
         flex-direction: column; 
         align-items: center;
-
+    }
  .div_img {
       width: 90%; 
      }
 
-    .div_text{
-        font-size: 10%;
+ .div_text {
+        width: 90%;
+        text-align: center;
     }
 
-    footer {
-        font-size: 30px;
+ .div_text p {
+        font-size: 24px;
+    }
+
+    .div_text h1 {
+        font-size: 40px;
+    }
+
+
+   footer {
+        font-size: 40px;
+        text-align: center;
     }
 }
