--- a/style.css
+++ b/style.css
@@ -65,19 +65,23 @@ footer{
  .div_text {
         width: 90%;
         text-align: center;
-    }
+        padding: 10px;
+     }
 
  .div_text p {
-        font-size: 24px;
+        font-size: 20px; 
     }
 
-    .div_text h1 {
-        font-size: 40px;
+ .div_text h1 {
+        font-size: 35px;
+    }
+ header h1 {
+        font-size: 35px;
+        padding: 15px;
     }
 
-
-   footer {
-        font-size: 40px;
-        text-align: center;
+    footer {
+        font-size: 30px;
+        padding: 15px;
     }
 }
