--- a/style.css
+++ b/style.css
@@ -1,87 +1,73 @@
-header h1 {
-    text-align: justify;
-    background-color: red;
-    color: white;
-    font-size: 80px;
+body{
+        background: linear-gradient(135deg, #2cb8b2, #70399a);
+}
+header, footer {
     display: flex;
+    flex-direction:column;
     align-items: center;
-    justify-items: center;
     justify-content: center;
+    text-align: center;
+   background: red;
+    color: white;
+    border-radius: 20px;
+    border: 3px solid black;
+    box-shadow: 2px 4px 12px black;
 }
 
-.div_maior{
+header img {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    max-width: 80%;
+    border-radius: 20px;
+    border: 3px solid black;
+    box-shadow: 0 2px 8px solid black;
+    margin-bottom: 1%;
+    background: linear-gradient(135deg, #2cb8b2, #70399a);
+}
+
+
+header h1 {
+    text-shadow: 20px 10px 3px rgba(0, 0, 0, 0.6);
+}
+
+div {
     flex-direction: row;
 }
 
-.div_img {
-    width: 50%;
-    margin: 2%;
+div img {
+    width: 20%;
+    margin-left: 10%;
+    margin-top: 2%;
 }
-
-.div_img img {
-    width: 100%;
+#dedo_img{
+    padding-left: 30%;
 }
-
-.div_text{
-    width: 50%;
-}
-
-.div_text p{
-    text-align: justify;
-    font-size: 30px;
-}
-
-.div_text h1{
-    font-size: 60px;
-}
-
-hr{ 
-    border: 5px solid rgb(255, 0, 0);
-    width: 100%;
-    margin: 50px 0;
-}
-
 footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: red;
     color: white;
-    font-size: 80px;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    justify-content: center;
 }
 
-@media (max-width: 768px) {
-    
-    .div_maior {
-        flex-direction: column; 
-        align-items: center;
-    }
- .div_img {
-      width: 90%; 
-     }
 
- .div_text {
-        width: 90%;
-        text-align: center;
-        padding: 10px;
-     }
-
- .div_text p {
-        font-size: 20px; 
+/* Responsividade extra para telas menores */
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 1.5rem;
     }
 
- .div_text h1 {
-        font-size: 35px;
-    }
- header h1 {
-        font-size: 35px;
-        padding: 15px;
+    div img {
+        max-width: 100%;
     }
 
-    footer {
-        font-size: 30px;
-        padding: 15px;
+    header, footer {
+        padding: 0.5rem;
+        margin: 0.5rem;
     }
 }
